--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -155,6 +155,52 @@
     "otp.link": "One-Time-Password generieren",
     "otp.title": "Neues One-Time-Password generieren",
     "report.link": "Report",
+    "reports.a1.title": "",
+    "reports.a10.description.long": "<strong>Welche Aussteller/innen haben welche Anzahl eines spezifischen Zertifikatstyps in einem definierten Zeitraum ausgestellt? </strong></br></br>Dieser Report liefert Ihnen, nach Auswahl eines Zertifikatstyps, eine nach Aussteller/in gegliederte Liste mit der Summe der ausgestellten Zertifikatstypen.",
+    "reports.a10.description.short": "Übersicht aller Aussteller/innen eines bestimmten Zertifikatstyps inkl. Ausstellkanal für einen definierten Zeitraum.",
+    "reports.a10.title": "A7 / A10",
+    "reports.a11.description.long": "<strong>Welche Zertifikate sind während eines bestimmten Zeitraums revoziert worden?</strong></br></br>Dieser Report liefert Ihnen eine Liste aller revozierten Zertifikate, die während des angefragten Zeitraums im ausgewählten Kanton revoziert worden sind. Bitte beachten Sie, dass der Revokationszeitraum nicht dem Ausstellungszeitraum der Zertifikate entspricht.",
+    "reports.a11.description.short": "Liste revozierter Zertifikate eines bestimmten Zeitraums.",
+    "reports.a11.title": "A11",
+    "reports.a12.description.long": "Dieser Report liefert Ihnen nach Eingabe der Transfercodes eine Liste aller Zertifikate, welche zu den Transfercodes passen. Bitte berücksichtigen Sie, dass im Zeitraum 13.11.21 bis 21.02.22 nur rekonstruierte Daten zur Verfügung stehen.",
+    "reports.a12.description.short": "Sie benötigen zusätzliche Informationen zu bestimmten Zertifikaten, deren Transfercode Sie kennen? ",
+    "reports.a12.title": "A12",
+    "reports.a2.description.long": "<strong>Wer hat wann und über welchen Ausstellkanal dieses spezifische Zertifikat ausgestellt und welcher Zertifikatstyp war das?</strong></br></br>\nNach Eingabe der UVCI liefert Ihnen dieser Report Informationen zur Ausstellerin/zum Aussteller, den Ausstellzeitpunkt und -kanal sowie den Typ des gesuchten Zertifikats. Informationen zur Person, für die das Zertifikat ausgestellt wurde, sind nicht verfügbar.",
+    "reports.a2.description.short": "Detailinformationen (Ausstellkanal, Aussteller/in, Zeitpunkt und Zertifikatstyp) zu einer spezifischen Zertifikats-UVCI. Informationen zur Person, für die das Zertifikat ausgestellt wurde, sind nicht verfügbar.",
+    "reports.a2.title": "A2",
+    "reports.a3.description.long": "<strong>Wie viele Zertifikate welchen Typs hat ein spezifischer Aussteller in einem definierten Zeitraum über welche Kanäle ausgestellt?</strong></br></br>Dieser Report liefert Ihnen eine nach Aussteller/in gegliederte Liste mit der Summe der ausgestellten Zertifikatstypen und Ausstellkanäle.",
+    "reports.a3.description.short": "Anzahl und Typ aller ausgestellten Zertifikate einer spezifischen Ausstellerin, eines spezifischen Ausstellers oder einer Organisationseinheit (Unit).",
+    "reports.a3.title": "A3",
+    "reports.a4.description.long": "<strong>Welche Zertifikate (UVCI, Typ, Zeitpunkt) hat ein/e spezifische/r Aussteller/in in einem definierten Zeitraum über welche Kanäle ausgestellt? </strong></br></br>Nach der Auswahl und Suche der entsprechenden Einheiten (Organisation / Aussteller/in) liefert Ihnen dieser Report eine Liste mit den ausgestellten Zertifikaten inkl. Details wie Zertifikatstyp, Ausstellkanal, Ausstellzeitpunkt und UVCI.",
+    "reports.a4.description.short": "Detailinformationen zu allen ausgestellten Zertifikaten einer bestimmten Ausstellerin, eines bestimmten Ausstellers oder Organisationseinheit (Unit).",
+    "reports.a4.title": "A4 / A6",
+    "reports.a5.description.long": "<strong>Wie viele Zertifikate welchen Typs haben die einzelnen Aussteller/innen einer Unit in einem definierten Zeitraum über welche Kanäle ausgestellt?</strong></br></br>Nach der Auswahl und Suche der entsprechenden Einheiten (Organisation / Aussteller/in) liefert Ihnen dieser Report eine nach Aussteller/in gegliederte Liste mit der Summe der ausgestellten Zertifikatstypen und Ausstellkanäle.",
+    "reports.a5.description.short": "Anzahl und Typ aller ausgestellten Zertifikate einer spezifischen Ausstellerin, eines spezifischen Ausstellers oder einer Organisationseinheit (Unit).",
+    "reports.a5.title": "A3 / A5",
+    "reports.a6.description.long": "<strong>Welche Zertifikate (UVCI, Typ, Zeitpunkt, Kanal) haben die einzelnen Aussteller/innen einer Unit in einem definierten Zeitraum ausgestellt?</strong></br></br>Nach der Auswahl und Suche der entsprechenden Einheiten (Organisation / Aussteller/in) liefert Ihnen dieser Report eine nach Aussteller/in gegliederte Liste mit den pro Aussteller/in ausgestellten Zertifikaten inkl. Details wie Zertifikatstyp, Ausstellkanal, Ausstellzeitpunkt und UVCI pro Zertifikat.",
+    "reports.a6.description.short": "Detailinformationen zu allen ausgestellten Zertifikaten einer bestimmten Ausstellerin/ eines bestimmten Ausstellers oder Organisationseinheit (Unit). ",
+    "reports.a6.title": "A4 / A6",
+    "reports.a7.description.long": "<strong>Welche/r Aussteller/in hat welche Anzahl eines spezifischen Zertifikatstyps in einem definierten Zeitraum ausgestellt? </strong></br></br>Dieser Report liefert Ihnen, nach Auswahl eines Zertifikatstyps, eine Liste von Aussteller/innen und die jeweilige Anzahl ausgestellter Zertifikate dieses Typs. ",
+    "reports.a7.description.short": "Übersicht aller Aussteller/innen eines bestimmten Zertifikatstyps inkl. Ausstellkanal für einen definierten Zeitraum.",
+    "reports.a7.title": "A7",
+    "reports.a8.description.long": "<strong>Wie viele Zertifikate der verschiedenen Zertifikatstypen wurden pro Woche (max. letzte 3 Monate) über welche Kanäle ausgestellt?</strong></br></br>Dieser Report liefert Ihnen eine wochenweise Liste von Zertifikatstypen und deren jeweilige Anzahl pro Ausstellkanal (je Woche ein Tabellenblatt). Das zweite bis x-te Tabellenblatt weisst dabei zusätzlich die Differenz zur Vorwoche aus.",
+    "reports.a8.description.short": "Wochenweise Anzahl Zertifikate pro Typ, gegliedert nach Ausstellkanal.",
+    "reports.a8.title": "A8",
+    "reports.a9.description.long": "<strongWie viele Zertifikate der verschiedenen Zertifikatstypen wurden bisher über den gesamten Ausstellungszeitraum über welche Kanäle ausgestellt?></strong></br></br>Dieser Report liefert Ihnen die Gesamtanzahl der ausgestellten Zertifikate eines Typs und die Kanäle, über welche sie ausgestellt wurden.",
+    "reports.a9.description.short": "Gesamtanzahl Zertifikate eines Typs im gesamten Ausstellungszeitraum, gegliedert nach Ausstellkanal.",
+    "reports.a9.title": "A9",
+    "reports.aggregation.header": "Sie möchten einen Verdachtsfall entdecken? Wählen Sie dazu einen Aggregationsreport.",
+    "reports.aggregation.info": "Es wird ein Report erstellt, der statistische Werte über einen bestimmten Zeitraum ausweist. Verdächtige Werte können auf einen allfälligen Missbrauchsfall von einzelnen Aussteller/innen oder Organisationen hinweisen.",
+    "reports.aggregation.title": "Aggregation",
+    "reports.detail.header": "Sie möchten einen Verdachtsfall analysieren? Wählen Sie dazu einen Detailreport.",
+    "reports.detail.info": "In einem konkreten Verdachtsfall wird ein Report erstellt, der jede einzelne Aktion einer Ausstellerin oder eines Ausstellers oder einer ausstellenden Organisation ausweist. Mit dem Nachweis kann der konkrete Missbrauchsfall widerlegt oder bewiesen werden.",
+    "reports.detail.title": "Detail",
+    "reports.param-help.description": "Falls Sie Fragen zu den Parametern haben, finden Sie hier zu jedem Parameter eine Erklärung.",
+    "reports.param-help.download": "Download Hilfestellung",
+    "reports.param-help.title": "Hilfestellung Parameter",
+    "reports.statistic.header": "Sie möchten eine statistische Auswertung? Wählen Sie dazu einen Statistikreport.",
+    "reports.statistic.info": "Mit dem Statistikreport werden die Gesamtzahlen der in der Schweiz erstellten Covid-Zertifikaten pro Zertifikatstyp ausgewiesen.",
+    "reports.statistic.title": "Statistik",
     "support.instructions": "Sollten Sie Probleme mit dem CSV Upload haben, wenden Sie sich bitte an den BIT-Helpdesk:",
     "support.instructionsUpdated": "Sollten Sie technische Probleme mit der Ausstellung haben, können Sie sich an den BIT-Helpdesk wenden.",
     "support.title": "Support",
