--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -155,6 +155,52 @@
     "otp.link": "Genera One-Time-Password",
     "otp.title": "Generare una nuova One-Time-Password",
     "report.link": "",
+    "reports.a1.title": "",
+    "reports.a10.description.long": "<strong>Quali emittenti hanno rilasciato un tipo specifico di certificato e quanti ne hanno rilasciati in un determinato periodo di tempo?</strong></br></br>Dopo che è stato selezionato un tipo di certificato, il rapporto fornisce un elenco, suddiviso per emittente, con il numero totale di tipi di certificati rilasciati.",
+    "reports.a10.description.short": "Panoramica di tutti gli emittenti di uno specifico tipo di certificato, compreso il canale di emissione, per un determinato periodo di tempo.",
+    "reports.a10.title": "A7 / A10",
+    "reports.a11.description.long": "<strong>Quali certificati sono stati revocati in un determinato periodo di tempo? </strong></br></br>Questo rapporto fornisce un elenco di tutti i certificati revocati durante il periodo in questione e nel Cantone selezionato. Si segnala che il periodo di revoca non corrisponde al periodo di emissione dei certificati.",
+    "reports.a11.description.short": "Elenco dei certificati revocati in un determinato periodo di tempo.",
+    "reports.a11.title": "A11",
+    "reports.a12.description.long": "<strong>Sono necessarie ulteriori informazioni su certificati specifici di cui si conosce il codice di trasferimento?</strong></br></br>Dopo che sono stati immessi i codici di trasferimento, questo rapporto fornisce un elenco di tutti i certificati corrispondenti ai codici selezionati. Si segnala che per il periodo dal 13.11.2021 al 21.02.2022 sono disponibili solo dati ricostruiti.",
+    "reports.a12.description.short": "",
+    "reports.a12.title": "A12",
+    "reports.a2.description.long": "<strong>Chi ha rilasciato il certificato in questione, quando e attraverso quale canale? Di che tipo di certificato si tratta?</strong></br></br>Achtung: folgender Text noch nicht definitiv, muss noch überprüft werden!\nLungo: \nDopo che sono state immesse l'UVCI, il rapporto fornisce informazioni sull'emittente, la data e il canale di emissione nonché il tipo di certificato oggetto della ricerca. Non vengono fornite informazioni sulla persona per la quale è stato rilasciato il certificato.",
+    "reports.a2.description.short": "Informazioni dettagliate (canale di emissione, emittente, data del rilascio e tipo di certificato) su uno specifico identificativo del certificato (UVCI). Non vengono fornite informazioni sulla persona per la quale è stato rilasciato il certificato.",
+    "reports.a2.title": "A2",
+    "reports.a3.description.long": "<strong>Quanti certificati di quale tipo sono stati rilasciati da uno specifico emittente in un determinato periodo di tempo e attraverso quali canali?</strong></br></br>Questo rapporto fornisce un elenco, suddiviso per emittenti, con il numero totale di tipi di certificati rilasciati e i relativi canali di emissione. ",
+    "reports.a3.description.short": "Numero e tipo di tutti i certificati rilasciati da uno specifico emittente o da una specifica unità organizzativa (Unit).",
+    "reports.a3.title": "A3",
+    "reports.a4.description.long": "<strong>Quali certificati (UVCI, tipo, data) sono stati rilasciati da uno specifico emittente in un determinato periodo di tempo e attraverso quali canali?</strong></br></br>Dopo che è stata selezionata e cercata la rispettiva unità (organizzazione, emittente), questo rapporto fornisce un elenco dei certificati rilasciati, con i relativi dettagli, come tipo di certificato, canale di emissione, data del rilascio e UVCI.",
+    "reports.a4.description.short": "Informazioni dettagliate su tutti i certificati rilasciati da uno specifico emittente o da una specifica unità organizzativa (Unit). ",
+    "reports.a4.title": "A4 / A6",
+    "reports.a5.description.long": "<strong>Quanti certificati di quale tipo sono stati rilasciati da uno specifico emittente di un’unità in un determinato periodo di tempo e attraverso quali canali?</strong></br></br>Dopo che è stata selezionata e cercata la rispettiva unità (organizzazione, emittente), questo rapporto fornisce un elenco, suddiviso per emittenti, con il numero totale di tipi di certificati rilasciati e i relativi canali di emissione.",
+    "reports.a5.description.short": "Numero e tipo di tutti i certificati rilasciati da uno specifico emittente o da una specifica unità organizzativa (Unit).",
+    "reports.a5.title": "A3 / A5",
+    "reports.a6.description.long": "<strong>Quali certificati (UVCI, tipo, data, canale) sono stati rilasciati da uno specifico emittente di un’unità in un determinato periodo di tempo?</strong></br></br>Dopo che è stata selezionata e cercata la rispettiva unità (organizzazione, emittente), questo rapporto fornisce un elenco, suddiviso per emittenti, dei certificati rilasciati, con i relativi dettagli, come tipo di certificato, canale di emissione, data del rilascio e UVCI.",
+    "reports.a6.description.short": "Informazioni dettagliate su tutti i certificati rilasciati da uno specifico emittente o da una specifica unità organizzativa (Unit).",
+    "reports.a6.title": "A4 / A6",
+    "reports.a7.description.long": "<strong>Quale emittente ha rilasciato uno specifico tipo di certificato in un determinato periodo di tempo e quanti di questi certificati ha rilasciato? </strong></br></br>Dopo che è stato selezionato un tipo di certificato, questo rapporto fornisce un elenco di emittenti e il numero di certificati rilasciati del tipo in questione.",
+    "reports.a7.description.short": "Panoramica di tutti gli emittenti di uno specifico tipo di certificato, compreso il canale di emissione, per un determinato periodo di tempo.",
+    "reports.a7.title": "A7",
+    "reports.a8.description.long": "<strong>Quanti certificati dei diversi tipi di certificato sono stati rilasciati ogni settimana (al massimo negli ultimi 3 mesi) e attraverso quali canali?</strong></br></br>Questo rapporto fornisce un elenco settimanale dei tipi di certificato rilasciati con il relativo numero per canale di emissione (un foglio di calcolo per settimana). Dal secondo all’ultimo foglio di calcolo viene inoltre mostrata la differenza totale rispetto alla settimana precedente.",
+    "reports.a8.description.short": "Numero settimanale di certificati per tipo, suddivisi per canale di emissione.",
+    "reports.a8.title": "A8",
+    "reports.a9.description.long": "<strong>Quanti certificati dei diversi tipi sono stati rilasciati finora nell’intero periodo di emissione e attraverso quali canali?</strong></br></br>Questo rapporto fornisce il numero totale di certificati rilasciati di un tipo specifico e informa sui canali attraverso i quali sono stati rilasciati.",
+    "reports.a9.description.short": "Numero totale di certificati di un tipo specifico, suddivisi per canale di emissione nell’intero periodo di emissione.",
+    "reports.a9.title": "A9",
+    "reports.aggregation.header": "",
+    "reports.aggregation.info": "",
+    "reports.aggregation.title": "",
+    "reports.detail.header": "",
+    "reports.detail.info": "",
+    "reports.detail.title": "",
+    "reports.param-help.description": "",
+    "reports.param-help.download": "",
+    "reports.param-help.title": "",
+    "reports.statistic.header": "",
+    "reports.statistic.info": "",
+    "reports.statistic.title": "",
     "support.instructions": "In caso di problemi con l'invio di CSV, si rivolga all'helpdesk dell'UFIT:",
     "support.instructionsUpdated": "Se ha dei problemi tecnici nell'emissione di certificati Covid, contatti l'helpdesk di UFIT.",
     "support.title": "Supporto",
